# ChromaDisc

./: .gitignore  Cargo.toml  README.md  devenv.nix
bcd/: Cargo.toml
bcd/src/: lib.rs
cdio/: Cargo.toml
cdio/src/core/: addressing.rs  constants.rs  util.rs
cdio/src/device/: mod.rs
cdio/src/rainbow_books/: atip.rs  mod.rs
cdio/src/scsi/: mod.rs
cdio/src/scsi/mmc/: commands_new.rs  features_old.rs  mod.rs  types.rs
cdio/src/scsi/mmc/commands/: get_configuration.rs  mod.rs
cdio/src/scsi/mmc/commands/read_toc_pma_atip/: atip.rs  cd_text.rs  mod.rs  multi_session_info.rs  pma.rs  raw_toc.rs
cdio/src/scsi/mmc/commands_old/: mod.rs  read_track_info.rs
cdio/src/scsi/mmc/features/: core_feature.rs  mod.rs  profile_list.rs
cdio/src/transport/: error.rs  mod.rs
chromadisc/: Cargo.toml
chromadisc/src/: cdio.rs  main.rs
docs/: notes.md  q_subcode.md  rainbow_books.md  references.md  scsi.md
mmc-errors/: Cargo.toml
mmc-errors/src/: lib.rs
rainbow-books/: Cargo.toml
rainbow-books/src/: bcd.rs  core.rs  lib.rs  msf.rs  q_subcode.md  q_subcode.rs
rainbow-books/src/orange_book/: ATIP-descriptor.md  atip.rs  mod.rs
rainbow-books/src/red_book/: mod.rs  q_subcode.rs
scsi-lib/: Cargo.toml
scsi-lib/src/: lib.rs
scsi-lib/src/core/: addressing.rs  mod.rs
scsi-lib/src/device/: mod.rs
scsi-lib/src/rainbow_books/: mod.rs  q_subcode.rs
scsi-lib/src/scsi/mmc/: commands_new.rs  features.rs  mod.rs  types.rs
scsi-lib/src/scsi/mmc/commands/: get_configuration.rs  inquiry.rs  mod.rs  read_cd.rs  start_stop_unit.rs  toc.rs
scsi-lib/src/scsi/mmc/commands/read_toc_pma_atip/: atip.rs  formatted_toc.rs  mod.rs  multi_session_info.rs  pma.rs  raw_toc.rs
scsi-lib/src/scsi/mmc/commands_old/: get_configuration.rs  read_capacity.rs  toc.rs
scsi-lib/src/transport/: sgio.rs
src/: addressing.rs  cdb.rs  cdio.rs  constants.rs  error.rs  main.rs  read_cd.rs  sgio.rs  toc.rs
src/commands/: get_configuration.rs  inquiry.rs  mod.rs  read_capacity.rs  read_cd.rs  read_track_info.rs  toc.rs
src/features/: core.rs  mod.rs  morphing.rs  profile_list.rs
