[package]
name = "chromadisc"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = "0.7.6"
bitflags = "2.10.0"
chrono = "0.4.42"
derive_more = { version = "2.1.1", features = ["full"] }
i24 = "2.2.7"
indicatif = "0.18.3"
libc = "0.2.178"
libcdio-sys = "1.0.0"
mmc-errors = { version = "0.1.0", path = "mmc-errors" }
nix = { version = "0.30.1", features = ["ioctl"] }
num_enum = { version = "0.7.5", features = ["complex-expressions"] }
thiserror = "2.0.17"
